# red-teaming-agent

./: .env.example  .gitignore  INTEGRATION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  TESTING.md  check-apim-config.ps1  generate_oauth_url.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  test.http  test_mcp_fixed_session.py  working_mcp_tools.txt
config/: config.yaml
docs/: AZURE_SETUP.md  DATASETS_REFERENCE.md
examples/: advanced_callback_example.py  dataset_examples.py  model_config_example.py  simple_callback_example.py
infra/: main.bicep
infra/app/apim-mcp/: mcp-api.bicep  mcp-api.policy.simple.xml
src/: __init__.py  auth.py  config_manager.py  datasets.py  function_app.py  logger.py  red_team_agent.py  results_processor.py
tests/: test_auth.py  test_config.py  test_results_processor.py
